# usapyon

./: .gitignore  Cargo.toml  DiscordMessageHandler.py  MessageToSpeechProcessor.py  README.md  SpeechTextFormatter.py  VoiceSynth.py  VoiceSynthConfig.py  VoiceSynthEventProcessor.py  VoiceSynthEventResponder.py  VoiceSynthHandler.py  VoiceSynthServer.py  VoiceSynthService.py  bot_commands.py  characters_info.json  chatgpt.sh  common.py  config.json  config.pkl  main.py  requirements.txt  settings.json  settings.py  settings_loader.py  specification.md  test.py  utils.py  voice.py  voice_connect.py
commands/: add_channel.py  config.py  help.py  info.py  join.py  leave.py  settings.py  skip.py
src/: credit_display_handler.rs  main.rs  retry_handler.rs  serenity_utils.rs  synthesis_queue.rs  synthesis_queue_manager.rs  usapyon_config.rs  usapyon_event_handler.rs  voice_channel_tracker.rs
src/commands/: clear.rs  join.rs  leave.rs  liststyles.rs  mod.rs  setstyle.rs  skip.rs
system/: usapyon.service  voicechatloid.service  voicevox-engine.service
