[package]
name = "voice_chat_loid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.12"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]
[dependencies.symphonia]
version = "0.5.2"
