[package]
name = "voice_chat_loid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.115"
bytes = "1.6.0"
songbird = { version = "0.4.1", features = ["builtin-queue"] }
symphonia = "0.5.4"
async-recursion = "1.1.0"